--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 img {
   border-radius: 50%;
-  margin-left: 300px;
-  margin-right: 300px;
+  margin:0 auto;
+  display: block;
 }
 
 .main-title {
